--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,8 @@
 }
 
 .ql-editor {
+  min-height: 130px;
+  
   font-family: 'Lato', sans-serif !important;
   font-size: 14px !important;
   line-height: 22px !important;
